--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script>
+		(function () {
+			const stored = localStorage.getItem('theme');
+			const theme = (stored === 'light' || stored === 'dark') ? stored : 'system';
+			const dark = theme === 'dark' || (theme === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches);
+			if (dark) document.documentElement.classList.add('dark');
+			else document.documentElement.classList.remove('dark');
+		})();
+	</script>
 	<link rel="icon" href="/favicon.ico" />
 	<meta name="theme-color" content="#000000" />
 	<meta name="description" content="A management system for props" />
